--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,18 +1,14 @@
-= render 'shared/errors', resource: @answer
-
 h1= @question.title
 p= @question.body
 
 h2 Answers
-
-- if @answers&.any?
+.answers
   = render @answers
-- else
-  p No answers yet.
 
 h3 Write an Answer:
-
-= form_with model: [@question, @answer], local: true do |f|
+.answer-errors
+  = render 'shared/errors', resource: @answer
+= form_with model: [@question, @answer], local: false do |f|
   .form-group
     = f.label :body
     = f.text_area :body, class: 'form-control'
