--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,6 +1,6 @@
-p= link_to 'Ask question', new_question_path
+- if user_signed_in?
+    p= link_to 'Ask question', new_question_path
 
 - @questions.each do |q|
-  div.question
-    h2= q.title
-    p= q.body
+    h2= link_to q.title, q
+    p= truncate(q.body, length: 50)
