--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,11 +1,13 @@
 div id="answer_#{answer.id}"
-  p= answer.author.email
-  p= answer.body
+  b= answer.author.email
   p.em Posted at: #{answer.created_at.strftime("%d %B %Y, %H:%M")}
+  p= answer.body
 
   - if user_signed_in? && answer.author == current_user
     p = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id:  answer.id }
     p = link_to 'Delete', answer_path(answer), remote: true, class: "delete-answer-link delete-#{answer.id}", method: :delete
+    - if !answer.best?
+      p = button_to 'Make best', make_best_answer_path(answer), method: :patch, remote: true
 
   div id="answer-edit-errors_#{answer.id}"
     = render 'shared/errors', resource: answer
