--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -11,6 +11,10 @@ h3 Write an Answer:
   = render 'shared/errors', resource: @answer
 = form_with model: [@question, @answer], local: false, class: 'new-answer' do |f|
   .form-group
+    p
     = f.label :body
     = f.text_area :body, class: 'form-control', id: 'answer_body'
+    p
+      = f.label :files
+      = f.file_field :files, multiple: true
   = f.submit 'Submit Answer', class: 'btn btn-success'
