--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -22,6 +22,6 @@ div id="answer_#{answer.id}"
     = f.text_area :body
     p
       = f.label :files, 'Add file'
-      = f.file_field :files, multiple: true
+      = f.file_field :files, multiple: true, direct_upload: true
       = render 'answers/edit_files', answer: answer
     = f.submit 'Save'
