--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -16,5 +16,5 @@ h3 Write an Answer:
     = f.text_area :body, class: 'form-control', id: 'answer_body'
     p
       = f.label :files
-      = f.file_field :files, multiple: true
+      = f.file_field :files, multiple: true, direct_upload: true
   = f.submit 'Submit Answer', class: 'btn btn-success'
