--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -5,7 +5,7 @@ div id="answer_#{answer.id}"
   b= answer.author.email
   p.em Posted at: #{answer.created_at.strftime("%d %B %Y, %H:%M")}
   p= answer.body
-  = render 'answers/files', answer: answer
+  = render 'shared/attachments', resource: answer
 
   - if user_signed_in?
     - if answer.author == current_user
@@ -23,5 +23,5 @@ div id="answer_#{answer.id}"
     p
       = f.label :files, 'Add file'
       = f.file_field :files, multiple: true, direct_upload: true
-      = render 'answers/edit_files', answer: answer
+      = render 'shared/attachments', resource: answer, edit_mode: true
     = f.submit 'Save'
