--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -17,4 +17,13 @@ h3 Write an Answer:
     p
       = f.label :files
       = f.file_field :files, multiple: true, direct_upload: true
+    p Links
+    p
+      = f.fields_for :links do |l|
+        p
+          = l.label :name, 'Link name'
+          = l.text_field :name
+        p
+          = l.label :url
+          = l.text_field :url
   = f.submit 'Submit Answer', class: 'btn btn-success'
