--- a/app/views/shared/_link.html.slim
+++ b/app/views/shared/_link.html.slim
@@ -3,4 +3,4 @@
     p Links:
     ul
       - resource.links.each do |link|
-        li = link_to link.name, link.url
+        li = link_to link.name, link.url, target: "_blank"
