--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -13,15 +13,13 @@
     = f.label :files
     = f.file_field :files, multiple: true, direct_upload: true
 
-  p Links:
+  b Links:
   p
-    = f.fields_for :links do |l|
-      p
-        = l.label :name, 'Link name'
-        = l.text_field :name
-
-      p
-        = l.label :url
-        = l.text_field :url
+    #links
+      = f.fields_for :links do |link|
+        = render 'link_fields', f: link
+      .links-add
+        p
+        = link_to_add_association 'Add one more link', f, :links, class: 'btn btn-secondary'
   p
     = f.submit 'Ask'
