--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -25,4 +25,12 @@ div id="answer_#{answer.id}"
       = f.label :files, 'Add file'
       = f.file_field :files, multiple: true, direct_upload: true
       = render 'shared/attachments', resource: answer, edit_mode: true
+    b Links
+    p
+      #answer-links-edit
+        = f.fields_for :links do |link|
+          = render 'link_fields', f: link
+        .answer-links-add-edit
+          p
+          = link_to_add_association 'Add one more link', f, :links, class: 'btn btn-secondary'
     = f.submit 'Save'
