--- a/app/views/shared/_link.html.slim
+++ b/app/views/shared/_link.html.slim
@@ -4,3 +4,5 @@
     ul
       - resource.links.each do |link|
         li = link_to link.name, link.url, target: "_blank"
+        - if link.gist?
+          = javascript_include_tag "#{link.url}.js"
