--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -2,9 +2,9 @@
   .d-flex.align-items-center
     span.me-2.text-dark
       = current_user.email
-      = link_to 'Questions', questions_path, class: 'me-3'
+      = link_to 'Questions', questions_path, class: 'ms-3 me-3'
+      = link_to 'My Rewards', rewards_user_path(current_user)
   = button_to 'Log Out', destroy_user_session_path, method: :delete, class: 'btn btn-secondary'
 - else
   = link_to "Sign In", new_session_path(:user), class: 'me-3'
   = link_to "Sign Up", new_registration_path(:user), class: 'btn btn-primary'
-
