--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -7,6 +7,7 @@ div id="answer_#{answer.id}"
   p= answer.body
   = render 'shared/attachments', resource: answer
   = render 'shared/link', resource: answer
+  = render 'shared/reactions', resource: answer
 
   - if user_signed_in?
     - if answer.author == current_user
