--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,20 +1,21 @@
 div id="answer_#{answer.id}"
   - if answer.best
-    h3 Best answer:
+    h5 Best answer:
 
-  b= answer.author.email
-  p.em Posted at: #{answer.created_at.strftime("%d %B %Y, %H:%M")}
+  small.text-muted= "Posted at: #{answer.created_at.strftime("%d %B %Y, %H:%M")}"
+  p.text-muted= answer.author.email
   p= answer.body
   = render 'shared/attachments', resource: answer
   = render 'shared/link', resource: answer
   = render 'shared/reactions', resource: answer
 
-  - if user_signed_in?
-    - if answer.author == current_user
-      p = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id:  answer.id }
-      p = link_to 'Delete', answer_path(answer), local: false, remote: true, class: "delete-answer-link delete-#{answer.id}", method: :delete
-    - if !answer.best? && @question.author == current_user
-      p = button_to 'Make best', make_best_answer_path(answer), method: :patch, remote: true
+  .d-inline-flex.align-items-center
+    - if user_signed_in?
+      - if answer.author == current_user
+        p.m-2 = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id:  answer.id }
+        p.m-2 = link_to 'Delete', answer_path(answer), local: false, remote: true, class: "delete-answer-link delete-#{answer.id}", method: :delete
+      - if !answer.best? && @question.author == current_user
+        p.m-2 = button_to 'Make best', make_best_answer_path(answer), method: :patch, remote: true
 
   div id="answer-edit-errors_#{answer.id}"
     = render 'shared/errors', resource: answer
