Action cable to create answers

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,4 +1,4 @@
-.section.questions.ms-4.me-4
+.section.questions.ms-4.me-4 data-question-id=@question.id
   = render @question
 
   .answers.ms-5.mb-4
