--- a/app/views/shared/_reactions.html.slim
+++ b/app/views/shared/_reactions.html.slim
@@ -1,8 +1,8 @@
-div class='reaction' id="reaction_#{resource.id}" data-reactionable-type=resource.class.name data-reactionable-id=resource.id
+.reaction id="reaction_#{resource.id}" data-reactionable-type=resource.class.name data-reactionable-id=resource.id
   .reactions-rating
-    span class="text-decoration-underline"
+    span.text-decoration-underline
       p Rating:  #{resource.reaction_rating}
-  - if user_signed_in? && resource.author != current_user
+  - if current_user && resource.author != current_user
     - user_reaction = resource.reactions.find_by(user: current_user)
     .d-inline-flex
       = button_to 'Like', like_reactions_path(reactionable_type: resource.class.name, reactionable_id: resource.id), local: false, remote: true, method: :patch, class: "btn #{user_reaction&.like? ? 'btn-success' : 'btn-outline-success'} like-btn mx-3"
