--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -7,14 +7,14 @@ div id="answer_#{answer.id}"
   p= answer.body
   = render 'shared/attachments', resource: answer
   = render 'shared/link', resource: answer
-  = render 'shared/reactions', resource: answer
+  = render 'shared/reactions', resource: answer, current_user: current_user
 
   .d-inline-flex.align-items-center
-    - if user_signed_in?
+    - if current_user
       - if answer.author == current_user
         p.m-2 = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id:  answer.id }
         p.m-2 = link_to 'Delete', answer_path(answer), local: false, remote: true, class: "delete-answer-link delete-#{answer.id}", method: :delete
-      - if !answer.best? && @question.author == current_user
+      - if !answer.best? # && @question.author == current_user
         p.m-2 = button_to 'Make best', make_best_answer_path(answer), method: :patch, remote: true
 
   div id="answer-edit-errors_#{answer.id}"
@@ -34,5 +34,5 @@ div id="answer_#{answer.id}"
           = render 'link_fields', f: link
         .answer-links-add-edit
           p
-          = link_to_add_association 'Add one more link', f, :links, class: 'btn btn-secondary'
+          / = link_to_add_association 'Add one more link', f, :links, class: 'btn btn-secondary'
     = f.submit 'Save'
