--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -14,7 +14,7 @@ div id="answer_#{answer.id}"
       - if answer.author == current_user
         p.m-2 = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id:  answer.id }
         p.m-2 = link_to 'Delete', answer_path(answer), local: false, remote: true, class: "delete-answer-link delete-#{answer.id}", method: :delete
-      - if !answer.best? # && @question.author == current_user
+      - if !answer.best? && answer.question.author == current_user
         p.m-2 = button_to 'Make best', make_best_answer_path(answer), method: :patch, remote: true
 
   div id="answer-edit-errors_#{answer.id}"
@@ -31,8 +31,8 @@ div id="answer_#{answer.id}"
     p
       #answer-links-edit
         = f.fields_for :links do |link|
-          = render 'link_fields', f: link
+          = render 'answers/link_fields', f: link
         .answer-links-add-edit
           p
-          / = link_to_add_association 'Add one more link', f, :links, class: 'btn btn-secondary'
+          = link_to_add_association 'Add one more link', f, :links, partial: 'answers/link_fields', class: 'btn btn-secondary'
     = f.submit 'Save'
