--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,30 +5,31 @@
     - @answers.each do |answer|
       = render answer
 
-  h3.mt-4 Write an Answer:
+  - if can?(:create, Answer)
+    h3.mt-4 Write an Answer:
 
-  .answer-errors.mb-3
-    = render 'shared/errors', resource: @answer
+    .answer-errors.mb-3
+      = render 'shared/errors', resource: @answer
 
-  = form_with model: [@question, @answer], local: false, class: 'new-answer' do |f|
-    .form-group.mb-4
-      p
-      = f.label :body, class: 'form-label'
-      = f.text_area :body, class: 'form-control', id: 'answer_body'
-    p
-      = f.label :files, class: 'form-label'
-      = f.file_field :files, multiple: true, direct_upload: true, class: 'form-control'
-
-    b Links
-    .links-section.mb-4
-      p
-      #links
-        = f.fields_for :links do |link|
-          = render 'link_fields', f: link
-
-      .links-add.mt-2
+    = form_with model: [@question, @answer], local: false, class: 'new-answer' do |f|
+      .form-group.mb-4
         p
-        = link_to_add_association 'Add one more link', f, :links, class: 'btn btn-secondary'
+        = f.label :body, class: 'form-label'
+        = f.text_area :body, class: 'form-control', id: 'answer_body'
+      p
+        = f.label :files, class: 'form-label'
+        = f.file_field :files, multiple: true, direct_upload: true, class: 'form-control'
 
-    .submit-btn.mt-4
-      = f.submit 'Submit Answer', class: 'btn btn-success'
+      b Links
+      .links-section.mb-4
+        p
+        #links
+          = f.fields_for :links do |link|
+            = render 'link_fields', f: link
+
+        .links-add.mt-2
+          p
+          = link_to_add_association 'Add one more link', f, :links, class: 'btn btn-secondary'
+
+      .submit-btn.mt-4
+        = f.submit 'Submit Answer', class: 'btn btn-success'
