--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -10,12 +10,12 @@ div id="answer_#{answer.id}"
   = render 'shared/reactions', resource: answer, current_user: current_user
 
   .d-inline-flex.align-items-center
-    - if current_user
-      - if answer.author == current_user
-        p.m-2 = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id:  answer.id }
-        p.m-2 = link_to 'Delete', answer_path(answer), local: false, remote: true, class: "delete-answer-link delete-#{answer.id}", method: :delete
-      - if !answer.best? && answer.question.author == current_user
-        p.m-2 = button_to 'Make best', make_best_answer_path(answer), method: :patch, remote: true
+    - if can?(:update, answer)
+      p.m-2 = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id:  answer.id }
+    - if can?(:destroy, answer)
+      p.m-2 = link_to 'Delete', answer_path(answer), local: false, remote: true, class: "delete-answer-link delete-#{answer.id}", method: :delete
+    - if can?(:make_best, answer) && !answer.best?
+      p.m-2 = button_to 'Make best', make_best_answer_path(answer), method: :patch, remote: true
 
   div id="answer-edit-errors_#{answer.id}"
     = render 'shared/errors', resource: answer
@@ -38,7 +38,7 @@ div id="answer_#{answer.id}"
     = f.submit 'Save'
 
   .comments.ms-5.mb-5[data-commentable-id="#{answer.id}"]
-    - if current_user
+    - if can?(:create, Comment)
       p = link_to 'Add Comment', '#', class: 'add-comment-link btn btn-outline-primary mx-5', data: { commentable_id: answer.id }
 
       .comment-form-container.d-none[data-commentable-id=answer.id]
