--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,5 +1,5 @@
 .section.collection.ms-4
-  - if user_signed_in?
+  - if can?(:create, Question)
     .mb-4
       = link_to 'Ask question', new_question_path, class: 'btn btn-primary'
 
