--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -3,7 +3,7 @@ nav.navbar.navbar-light.bg-light
     = link_to 'Thinknetica Demo', questions_path, class: 'navbar-brand'
 
     .d-inline-flex.align-items-center.ms-auto
-      - if user_signed_in?
+      - if can?(:manage, :session)
         span.text-dark.me-3 = current_user.email
         = link_to 'My Rewards', rewards_user_path(current_user), class: 'nav-link me-3'
         = button_to 'Log Out', destroy_user_session_path, method: :delete, class: 'btn btn-secondary'
