--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <body>
     <div>
       <%= render 'shared/nav' %>
+      <%= render 'search/form' %>
     </div>
 
     <p class="notice"><%= notice %></p>
