--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,49 +1,50 @@
-div id="answer_#{answer.id}"
-  - if answer.best
-    h5 Best answer:
+- cache answer do
+  div id="answer_#{answer.id}"
+    - if answer.best
+      h5 Best answer:
 
-  small.text-muted= "Posted at: #{answer.created_at.strftime("%d %B %Y, %H:%M")}"
-  p.text-muted= answer.author.email
-  p= answer.body
-  = render 'shared/attachments', resource: answer
-  = render 'shared/link', resource: answer
-  = render 'shared/reactions', resource: answer, current_user: current_user
+    small.text-muted= "Posted at: #{answer.created_at.strftime("%d %B %Y, %H:%M")}"
+    p.text-muted= answer.author.email
+    p= answer.body
+    = render 'shared/attachments', resource: answer
+    = render 'shared/link', resource: answer
+    = render 'shared/reactions', resource: answer, current_user: current_user
 
-  .d-inline-flex.align-items-center
-    - if can?(:update, answer)
-      p.m-2 = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id:  answer.id }
-    - if can?(:destroy, answer)
-      p.m-2 = link_to 'Delete', answer_path(answer), local: false, remote: true, class: "delete-answer-link delete-#{answer.id}", method: :delete
-    - if can?(:make_best, answer) && !answer.best?
-      p.m-2 = button_to 'Make best', make_best_answer_path(answer), method: :patch, remote: true
+    .d-inline-flex.align-items-center
+      - if can?(:update, answer)
+        p.m-2 = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id:  answer.id }
+      - if can?(:destroy, answer)
+        p.m-2 = link_to 'Delete', answer_path(answer), local: false, remote: true, class: "delete-answer-link delete-#{answer.id}", method: :delete
+      - if can?(:make_best, answer) && !answer.best?
+        p.m-2 = button_to 'Make best', make_best_answer_path(answer), method: :patch, remote: true
 
-  div id="answer-edit-errors_#{answer.id}"
-    = render 'shared/errors', resource: answer
-  = form_with model: answer, local: false, class: 'd-none', html: { id: "edit-answer-#{answer.id}" } do |f|
-    p
-    = f.label :body, 'Your answer'
-    = f.text_area :body
-    p
-      = f.label :files, 'Add file'
-      = f.file_field :files, multiple: true, direct_upload: true
-      = render 'shared/attachments', resource: answer, edit_mode: true
-    b Links
-    p
-      #answer-links-edit
-        = f.fields_for :links do |link|
-          = render 'answers/link_fields', f: link
-        .answer-links-add-edit
-          p
-          = link_to_add_association 'Add one more link', f, :links, partial: 'answers/link_fields', class: 'btn btn-secondary'
-    = f.submit 'Save'
-
-  .comments.ms-5.mb-5[data-commentable-id="#{answer.id}"]
-    - if can?(:create, Comment)
+    div id="answer-edit-errors_#{answer.id}"
+      = render 'shared/errors', resource: answer
+    = form_with model: answer, local: false, class: 'd-none', html: { id: "edit-answer-#{answer.id}" } do |f|
       p
-      p = link_to 'Add Comment', '#', class: 'add-comment-link btn btn-outline-primary mx-5', data: { commentable_id: answer.id }
+      = f.label :body, 'Your answer'
+      = f.text_area :body
+      p
+        = f.label :files, 'Add file'
+        = f.file_field :files, multiple: true, direct_upload: true
+        = render 'shared/attachments', resource: answer, edit_mode: true
+      b Links
+      p
+        #answer-links-edit
+          = f.fields_for :links do |link|
+            = render 'answers/link_fields', f: link
+          .answer-links-add-edit
+            p
+            = link_to_add_association 'Add one more link', f, :links, partial: 'answers/link_fields', class: 'btn btn-secondary'
+      = f.submit 'Save'
 
-      .comment-form-container.d-none[data-commentable-id=answer.id]
-        = render 'comments/form', resource: answer
+    .comments.ms-5.mb-5[data-commentable-id="#{answer.id}"]
+      - if can?(:create, Comment)
+        p
+        p = link_to 'Add Comment', '#', class: 'add-comment-link btn btn-outline-primary mx-5', data: { commentable_id: answer.id }
 
-    - answer.comments.each do |comment|
-      = render comment
+        .comment-form-container.d-none[data-commentable-id=answer.id]
+          = render 'comments/form', resource: answer
+
+      - answer.comments.each do |comment|
+        = render comment
