--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,46 +1,47 @@
-div id="question#{@question.id}"
-  h4= @question.title
-  p= @question.body
-  = render 'shared/attachments', resource: @question
-  = render 'shared/link', resource: @question
-  = render 'shared/reactions', resource: @question
+- cache @question do
+  div id="question#{@question.id}"
+    h4= @question.title
+    p= @question.body
+    = render 'shared/attachments', resource: @question
+    = render 'shared/link', resource: @question
+    = render 'shared/reactions', resource: @question
 
-  - if can?(:update, @question)
-    p = link_to 'Edit', '#', class: 'edit-question-link', data: { question_id:  @question.id }
+    - if can?(:update, @question)
+      p = link_to 'Edit', '#', class: 'edit-question-link', data: { question_id:  @question.id }
 
-    div id="question-edit-errors_#{@question.id}"
-    = render 'shared/errors', resource: @question
+      div id="question-edit-errors_#{@question.id}"
+      = render 'shared/errors', resource: @question
 
-    = form_with model: @question, local: false, class: 'd-none', html: { id: "edit-question-#{@question.id}" } do |f|
-      p
-      = f.label :title, 'Your question'
-      = f.text_field :title, id: 'question_title'
-      p
-      = f.label :body, 'Add description'
-      = f.text_area :body, id: 'question_body'
-      p
-        = f.label :files, 'Add file'
-        = f.file_field :files, multiple: true, direct_upload: true
-        = render 'shared/attachments', resource: @question, edit_mode: true
+      = form_with model: @question, local: false, class: 'd-none', html: { id: "edit-question-#{@question.id}" } do |f|
+        p
+        = f.label :title, 'Your question'
+        = f.text_field :title, id: 'question_title'
+        p
+        = f.label :body, 'Add description'
+        = f.text_area :body, id: 'question_body'
+        p
+          = f.label :files, 'Add file'
+          = f.file_field :files, multiple: true, direct_upload: true
+          = render 'shared/attachments', resource: @question, edit_mode: true
 
-      b Links
-      p
-        #links-edit
-          = f.fields_for :links do |link|
-            = render 'link_fields', f: link
-          .links-add-edit
-            p
-            = link_to_add_association 'Add one more link', f, :links, class: 'btn btn-secondary'
-      p
-      = f.submit 'Submit Question'
+        b Links
+        p
+          #links-edit
+            = f.fields_for :links do |link|
+              = render 'link_fields', f: link
+            .links-add-edit
+              p
+              = link_to_add_association 'Add one more link', f, :links, class: 'btn btn-secondary'
+        p
+        = f.submit 'Submit Question'
 
-  .comments.ms-5.mb-5[data-commentable-id="#{@question.id}"]
-    - if can?(:create, Comment)
-      p
-      p = link_to 'Add Comment', '#', class: 'add-comment-link btn btn-outline-primary mx-5', data: { commentable_id:  @question.id }
+    .comments.ms-5.mb-5[data-commentable-id="#{@question.id}"]
+      - if can?(:create, Comment)
+        p
+        p = link_to 'Add Comment', '#', class: 'add-comment-link btn btn-outline-primary mx-5', data: { commentable_id:  @question.id }
 
-      .comment-form-container.d-none[data-commentable-id="#{@question.id}"]
-        = render 'comments/form', resource: @question
+        .comment-form-container.d-none[data-commentable-id="#{@question.id}"]
+          = render 'comments/form', resource: @question
 
-    - @question.comments.each do |comment|
-      = render comment
+      - @question.comments.each do |comment|
+        = render comment
